Add Experiments Directory, and a Fattree Routing Compare Experiment.

--- a/simulator/ns-3.39/CMakeLists.txt
+++ b/simulator/ns-3.39/CMakeLists.txt
@@ -157,6 +157,8 @@ add_subdirectory(src)
 # Build NS library examples
 add_subdirectory(examples)
 
+add_subdirectory(experiments)
+
 # Build scratch/simulation scripts
 add_subdirectory(scratch)
 
